--- a/index.html
+++ b/index.html
@@ -144,6 +144,15 @@
 
                 <div class='row vspace-top-news'>
                     <div class="col-sm-2 news-date">
+                        May 2024
+                    </div>
+                    <div class="col">
+                        Two papers are accepted by NeurIPS 2024. Congratulations to Hongfu Gao!
+                    </div>
+                </div>
+
+                <div class='row vspace-top-news'>
+                    <div class="col-sm-2 news-date">
                         July 2024
                     </div>
                     <div class="col">
