--- a/index.html
+++ b/index.html
@@ -353,6 +353,78 @@
 
                     <div class="col">
                         <div class='paper-title'>
+                            C-Adapter: Adapting Deep Classifiers for Efficient Conformal Prediction Sets
+                        </div>
+                        <div class='paper-authors'>
+                            Kangdao Liu, Hao Zeng, Jianguo Huang, Huiping Zhuang, Chi-Man Vong, <b>Hongxin Wei</b> <sup>*</sup>
+                        </div>
+                        <div>
+                            <a href="https://arxiv.org/abs/2410.06814" target="_blank">[Paper]</a>
+                        </div>
+                    </div>
+                </div>
+
+                <div class='row vspace-top'>
+                    <!-- <div class="col-sm-3">
+                        <img src='imgs/star_img.png' class='img-fluid'>
+                    </div> -->
+
+                    <div class="col">
+                        <div class='paper-title'>
+                            Fine-tuning can Help Detect Pretraining Data from Large Language Models
+                        </div>
+                        <div class='paper-authors'>
+                            Hengxiang Zhang, Songxin Zhang, Bingyi Jing, <b>Hongxin Wei</b> <sup>*</sup>
+                        </div>
+                        <div>
+                            <a href="https://arxiv.org/abs/2410.06814" target="_blank">[Paper]</a>
+                        </div>
+                    </div>
+                </div>
+
+                <div class='row vspace-top'>
+                    <!-- <div class="col-sm-3">
+                        <img src='imgs/star_img.png' class='img-fluid'>
+                    </div> -->
+
+                    <div class="col">
+                        <div class='paper-title'>
+                            Defending Membership Inference Attacks via Privacy-aware Sparsity Tuning
+                        </div>
+                        <div class='paper-authors'>
+                            Qiang Hu, Hengxiang Zhang, <b>Hongxin Wei</b> <sup>*</sup>
+                        </div>
+                        <div>
+                            <a href="https://arxiv.org/abs/2410.06814" target="_blank">[Paper]</a>
+                        </div>
+                    </div>
+                </div>
+
+                <div class='row vspace-top'>
+                    <!-- <div class="col-sm-3">
+                        <img src='imgs/star_img.png' class='img-fluid'>
+                    </div> -->
+
+                    <div class="col">
+                        <div class='paper-title'>
+                            Understanding and Mitigating Miscalibration in Prompt Tuning for Vision-Language Models
+                        </div>
+                        <div class='paper-authors'>
+                            Shuoyuan Wang, Yixuan Li, <b>Hongxin Wei</b> <sup>*</sup>
+                        </div>
+                        <div>
+                            <a href="https://arxiv.org/abs/2410.02681" target="_blank">[Paper]</a>
+                        </div>
+                    </div>
+                </div>
+
+                <div class='row vspace-top'>
+                    <!-- <div class="col-sm-3">
+                        <img src='imgs/star_img.png' class='img-fluid'>
+                    </div> -->
+
+                    <div class="col">
+                        <div class='paper-title'>
                             TorchCP: A Library for Conformal Prediction based on PyTorch
                         </div>
                         <div class='paper-authors'>
