--- a/index.html
+++ b/index.html
@@ -126,16 +126,11 @@
                 </p>
                 <p>
                     <!-- My research interest is within the scope of robust deep learning, including robustness against noisy labels, out-of-distribution examples, and adversarial examples. -->
-                    My research interest falls in the scope of Natural Robustness, which preserves model performance under naturally induced data corruptions or alterations across the machine learning pipeline.
-                    The goal of my research is to build a reliable learning system, which can work safely and adaptively in the presence of unexpected data conditions across the entire pipeline.
-                    My research is closely related to data-centric machine learning and foundation model, including:
+                    My research interest falls in the scope of reliable machine learning (uncertainty quantification in Statistics), and its applications in data optimization and privacy. 
+                    Generally, we expect deep learning models to produce precise estimation of their uncertainty in predictions, using the form of confidences (probabilities) or conformal prediction sets. 
+                    Besides, my research is closely related to data-centric machine learning and foundation model, like data quality and efficiency. We are also interested in the statistic theory of data selection in machine learning, which provides theoretical principles to guide the data optimization in machine learning workflows.
+                    <p style="color: skyblue">We are always actively looking for Postdocs, PhDs, and RA/interns to join our research.</p>
                 </p>
-                <li> <i>Data quality: label noise, outliers, malicious data; </i> </li>
-                <li> <i>Data efficiency: data valuation, data selection; </i> </li>
-                <li> <i>Data privacy: membership inference attack, machine unlearning;</i> </li>
-                <li> <i>Reliable AI: conformal prediction, learning with rejection, confidence calibration (For LLM: harmless & honesty);</i>
-                </li>
-
                 
 
                 <div class='vspace-top'>
