--- a/index.html
+++ b/index.html
@@ -1309,22 +1309,24 @@
                     </div>
 
 
+
                     <div class="col">
                         <div class='paper-title'>
-                            Xuanning Zhou
+                            Mi Zhou
                         </div>
                         <div class='paper-desc'>
-                            Undergraduate student at HITSZ
+                            Research Intern, <br>
+                            Master student at Fudan University
                         </div>
                     </div>
 
 
                     <div class="col">
                         <div class='paper-title'>
-                            Qiang Hu
+                            Xuanning Zhou
                         </div>
                         <div class='paper-desc'>
-                            Undergraduate student at SUSTech
+                            Undergraduate student at HITSZ
                         </div>
                     </div>
 
@@ -1359,6 +1361,31 @@
                         </div>
                     </div>
 
+                </div>
+
+                <div>
+                    <div class="col">
+                        <div class='paper-title'>
+                            Qiang Hu
+                        </div>
+                        <div class='paper-desc'>
+                            Undergraduate student at SUSTech
+                        </div>
+                    </div>
+
+                    <div class="col">
+                        <div class='paper-title'>
+                        </div>
+                        <div class='paper-desc'>
+                        </div>
+                    </div>
+
+                    <div class="col">
+                        <div class='paper-title'>
+                        </div>
+                        <div class='paper-desc'>
+                        </div>
+                    </div>
                 </div>
                 
                 <div class='vspace-top'>
