--- a/index.html
+++ b/index.html
@@ -1363,7 +1363,7 @@
 
                 </div>
 
-                <div>
+                <div  class='row vspace-top'>
                     <div class="col">
                         <div class='paper-title'>
                             Qiang Hu
