--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
                 </p>
                 <p>
                     <!-- My research interest is within the scope of robust deep learning, including robustness against noisy labels, out-of-distribution examples, and adversarial examples. -->
-                    My research interest falls in the scope of reliable machine learning (uncertainty quantification in Statistics), and its applications in data optimization and privacy. 
+                    My research interest falls in the scope of reliable machine learning (uncertainty estimation), and its applications in data optimization and privacy. 
                     Generally, we expect deep learning models to produce precise estimation of their uncertainty in predictions, using the form of probabilities (confidences in ML) or conformal prediction sets. 
                     Besides, my research is closely related to data-centric machine learning and foundation model, like data quality and efficiency. We are also interested in the statistic theory of data selection in machine learning, which provides theoretical principles to guide the data optimization in machine learning workflows.
                     <p style="color: skyblue">We are always actively looking for Postdocs, PhDs, and RA/interns to join our research.</p>
