--- a/index.html
+++ b/index.html
@@ -136,6 +136,15 @@
                 <div class='vspace-top'>
                     <h1>News</h1>
                 </div>
+                
+                <div class='row vspace-top-news'>
+                    <div class="col-sm-2 news-date">
+                        November 2024
+                    </div>
+                    <div class="col">
+                        I will be serving as a Area Chair for ICML 2025.
+                    </div>
+                </div>
 
                 <div class='row vspace-top-news'>
                     <div class="col-sm-2 news-date">
