--- a/index.html
+++ b/index.html
@@ -139,6 +139,15 @@
                 
                 <div class='row vspace-top-news'>
                     <div class="col-sm-2 news-date">
+                        January 2025
+                    </div>
+                    <div class="col">
+                        I will be serving as a SPC for IJCAI 2025.
+                    </div>
+                </div>
+
+                <div class='row vspace-top-news'>
+                    <div class="col-sm-2 news-date">
                         November 2024
                     </div>
                     <div class="col">
