--- a/index.html
+++ b/index.html
@@ -136,6 +136,15 @@
                 <div class='vspace-top'>
                     <h1>News</h1>
                 </div>
+
+                <div class='row vspace-top-news'>
+                    <div class="col-sm-2 news-date">
+                        May 2024
+                    </div>
+                    <div class="col">
+                        Four papers are accepted by ICLR 2025. Congratulations to Kangdao, Wenyu, and Hengxiang!
+                    </div>
+                </div>
                 
                 <div class='row vspace-top-news'>
                     <div class="col-sm-2 news-date">
@@ -360,40 +369,22 @@
                 </div>
 
                 <div class='row vspace-top'>
-                    <!-- <div class="col-sm-3">
-                        <img src='imgs/star_img.png' class='img-fluid'>
-                    </div> -->
-
                     <div class="col">
                         <div class='paper-title'>
-                            C-Adapter: Adapting Deep Classifiers for Efficient Conformal Prediction Sets
+                            Understanding and Mitigating Miscalibration in Prompt Tuning for Vision-Language Models
+                        </div>
+                        <div class='paper-desc'>
+                            ICLR 2025
                         </div>
                         <div class='paper-authors'>
-                            Kangdao Liu, Hao Zeng, Jianguo Huang, Huiping Zhuang, Chi-Man Vong, <b>Hongxin Wei</b> <sup>*</sup>
+                            Shuoyuan Wang, Yixuan Li, <b>Hongxin Wei</b> <sup>*</sup>
                         </div>
                         <div>
-                            <a href="https://arxiv.org/abs/2410.09408" target="_blank">[Paper]</a>
+                            <a href="https://arxiv.org/abs/2410.02681" target="_blank">[Paper]</a>
                         </div>
                     </div>
                 </div>
 
-                <div class='row vspace-top'>
-                    <!-- <div class="col-sm-3">
-                        <img src='imgs/star_img.png' class='img-fluid'>
-                    </div> -->
-
-                    <div class="col">
-                        <div class='paper-title'>
-                            Fine-tuning can Help Detect Pretraining Data from Large Language Models
-                        </div>
-                        <div class='paper-authors'>
-                            Hengxiang Zhang, Songxin Zhang, Bingyi Jing, <b>Hongxin Wei</b> <sup>*</sup>
-                        </div>
-                        <div>
-                            <a href="https://arxiv.org/abs/2410.10880" target="_blank">[Paper]</a>
-                        </div>
-                    </div>
-                </div>
 
                 <div class='row vspace-top'>
                     <!-- <div class="col-sm-3">
@@ -413,23 +404,6 @@
                     </div>
                 </div>
 
-                <div class='row vspace-top'>
-                    <!-- <div class="col-sm-3">
-                        <img src='imgs/star_img.png' class='img-fluid'>
-                    </div> -->
-
-                    <div class="col">
-                        <div class='paper-title'>
-                            Understanding and Mitigating Miscalibration in Prompt Tuning for Vision-Language Models
-                        </div>
-                        <div class='paper-authors'>
-                            Shuoyuan Wang, Yixuan Li, <b>Hongxin Wei</b> <sup>*</sup>
-                        </div>
-                        <div>
-                            <a href="https://arxiv.org/abs/2410.02681" target="_blank">[Paper]</a>
-                        </div>
-                    </div>
-                </div>
 
                 <div class='row vspace-top'>
                     <!-- <div class="col-sm-3">
@@ -468,6 +442,34 @@
                 </div>
 
 
+
+                <div class='vspace-top'>
+                    <h1>Selected Publications</h1>
+                    <!-- (* Corresponding author; &#8224 Equal contribution) -->
+                    <!-- <span style="font-size: 15px; vertical-align: bottom;">(* Corresponding author; &#8224 Equal contribution)</span> -->
+                </div>
+
+                <div id='header-text-remark'>
+                    ( <sup>*</sup> Corresponding author; <sup>&#8224</sup> Equal contribution)
+                </div>
+
+                <div class='row vspace-top'>
+                    <div class="col">
+                        <div class='paper-title'>
+                            C-Adapter: Adapting Deep Classifiers for Efficient Conformal Prediction Sets
+                        </div>
+                        <div class='paper-desc'>
+                            ICLR 2025
+                        </div>
+                        <div class='paper-authors'>
+                            Kangdao Liu, Hao Zeng, Jianguo Huang, Huiping Zhuang, Chi-Man Vong, <b>Hongxin Wei</b> <sup>*</sup>
+                        </div>
+                        <div>
+                            <a href="https://arxiv.org/abs/2410.09408" target="_blank">[Paper]</a>
+                        </div>
+                    </div>
+                </div>
+
                 <div class='row vspace-top'>
                     <!-- <div class="col-sm-3">
                         <img src='imgs/star_img.png' class='img-fluid'>
@@ -476,6 +478,9 @@
                     <div class="col">
                         <div class='paper-title'>
                             Exploring Learning Complexity for Downstream Data Pruning
+                        </div>
+                        <div class='paper-desc'>
+                            ICLR 2025
                         </div>
                         <div class='paper-authors'>
                             Wenyu Jiang, Zhenlong Liu, Zejian Xie, Songxin Zhang, Bingyi Jing, <b>Hongxin Wei</b> <sup>*</sup>
@@ -488,35 +493,41 @@
 
 
 
-
                 <div class='row vspace-top'>
-                    <!-- <div class="col-sm-3">
-                        <img src='imgs/star_img.png' class='img-fluid'>
-                    </div> -->
-
                     <div class="col">
                         <div class='paper-title'>
-                            MetaInfoNet: Learning Task-Guided Information for Sample Reweighting
+                            Fine-tuning can Help Detect Pretraining Data from Large Language Models
+                        </div>
+                        <div class='paper-desc'>
+                            ICLR 2025
                         </div>
                         <div class='paper-authors'>
-                            <b>Hongxin Wei</b>, Lei Feng, Rundong Wang, Bo An
+                            Hengxiang Zhang, Songxin Zhang, Bingyi Jing, <b>Hongxin Wei</b> <sup>*</sup>
                         </div>
                         <div>
-                            <a href="https://arxiv.org/pdf/2012.05273.pdf" target="_blank">[Paper]</a>
+                            <a href="https://arxiv.org/abs/2410.10880" target="_blank">[Paper]</a>
+                        </div>
+                    </div>
+                </div>
+
+                <div class='row vspace-top'>
+                    <div class="col">
+                        <div class='paper-title'>
+                            Enhancing Outlier Knowledge for Few-Shot Out-of-Distribution Detection with Extensible Local Prompts
+                        </div>
+                        <div class='paper-desc'>
+                            ICLR 2025
+                        </div>
+                        <div class='paper-authors'>
+                            Fanhu Zeng, Zhen Cheng, Fei Zhu, <b>Hongxin Wei</b>, Xu-Yao Zhang
+                        </div>
+                        <div>
+                            <a href="https://openreview.net/pdf?id=Ew3VifXaxZ" target="_blank">[Paper]</a>
                         </div>
                     </div>
                 </div>
 
 
-                <div class='vspace-top'>
-                    <h1>Selected Publications</h1>
-                    <!-- (* Corresponding author; &#8224 Equal contribution) -->
-                    <!-- <span style="font-size: 15px; vertical-align: bottom;">(* Corresponding author; &#8224 Equal contribution)</span> -->
-                </div>
-
-                <div id='header-text-remark'>
-                    ( <sup>*</sup> Corresponding author; <sup>&#8224</sup> Equal contribution)
-                </div>
 
                                 
                 <div class='row vspace-top'>
