--- a/index.html
+++ b/index.html
@@ -1302,42 +1302,6 @@
 
                     <div class="col">
                         <div class='paper-title'>
-                            Ziyuan Wang
-                        </div>
-                        <div class='paper-desc'>
-                            Research Intern (Remote), <br>
-                            Master student at Chalmers University of Technology
-                        </div>
-                    </div>
-
-                    <div class="col">
-                        <div class='paper-title'>
-                            Mi Zhou
-                        </div>
-                        <div class='paper-desc'>
-                            Research Intern, <br>
-                            Master student at Fudan University
-                        </div>
-                    </div>
-
-                </div>
-
-
-
-                <div class='row vspace-top'>
-
-                    <div class="col">
-                        <div class='paper-title'>
-                            Qiqi Tao
-                        </div>
-                        <div class='paper-desc'>
-                            Research Intern, <br>
-                            Master degree from NUS, Singapore
-                        </div>
-                    </div>
-
-                    <div class="col">
-                        <div class='paper-title'>
                             Xuanning Zhou
                         </div>
                         <div class='paper-desc'>
@@ -1354,7 +1318,9 @@
                         </div>
                     </div>
 
+
                 </div>
+
 
                 <div class='row vspace-top'>
 
@@ -1387,29 +1353,6 @@
 
                 </div>
 
-                <div  class='row vspace-top'>
-
-                    <div class="col">
-                        <div class='paper-title'>
-                        </div>
-                        <div class='paper-desc'>
-                        </div>
-                    </div>
-
-                    <div class="col">
-                        <div class='paper-title'>
-                        </div>
-                        <div class='paper-desc'>
-                        </div>
-                    </div>
-
-                    <div class="col">
-                        <div class='paper-title'>
-                        </div>
-                        <div class='paper-desc'>
-                        </div>
-                    </div>
-                </div>
                 
                 <div class='vspace-top'>
                     <h1>Past Members</h1>
@@ -1427,11 +1370,13 @@
                         </div>
                     </div>
 
-
                     <div class="col">
                         <div class='paper-title'>
+                            Qiqi Tao
                         </div>
                         <div class='paper-desc'>
+                            Research Intern (2024), <br>
+                            Now PhD student at SUTD, Singapore
                         </div>
                     </div>
 
