--- a/index.html
+++ b/index.html
@@ -371,10 +371,65 @@
                 <div class='row vspace-top'>
                     <div class="col">
                         <div class='paper-title'>
-                            Understanding and Mitigating Miscalibration in Prompt Tuning for Vision-Language Models
+                            Exploring Imbalanced Annotations for Effective In-Context Learning
                         </div>
-                        <div class='paper-desc'>
-                            ICLR 2025
+                        <div class='paper-authors'>
+                            Hongfu Gao, Feipeng Zhang, Hao Zeng, Deyu Meng, Bingyi Jing, <b>Hongxin Wei</b> <sup>*</sup>
+                        </div>
+                        <div>
+                            <a href="https://arxiv.org/abs/2502.04037" target="_blank">[Paper]</a>
+                        </div>
+                    </div>
+                </div>
+
+                <div class='row vspace-top'>
+                    <div class="col">
+                        <div class='paper-title'>
+                            Parametric Scaling Law of Tuning Bias in Conformal Prediction
+                        </div>
+                        <div class='paper-authors'>
+                            Hao Zeng, Kangdao Liu, Bingyi Jing, <b>Hongxin Wei</b> <sup>*</sup>
+                        </div>
+                        <div>
+                            <a href="https://arxiv.org/abs/2502.03023" target="_blank">[Paper]</a>
+                        </div>
+                    </div>
+                </div>
+
+
+                <div class='row vspace-top'>
+                    <div class="col">
+                        <div class='paper-title'>
+                            How Contaminated Is Your Benchmark? Quantifying Dataset Leakage in Large Language Models with Kernel Divergence
+                        </div>
+                        <div class='paper-authors'>
+                            Hyeong Kyu Choi, Maxim Khanov, <b>Hongxin Wei</b>, Yixuan Li
+                        </div>
+                        <div>
+                            <a href="https://arxiv.org/abs/2502.00678" target="_blank">[Paper]</a>
+                        </div>
+                    </div>
+                </div>
+
+
+                <div class='row vspace-top'>
+                    <div class="col">
+                        <div class='paper-title'>
+                            Robust Online Conformal Prediction under Uniform Label Noise
+                        </div>
+                        <div class='paper-authors'>
+                            Huajun Xi, Kangdao Liu, Hao Zeng, Wenguang Sun,<b>Hongxin Wei</b> <sup>*</sup>
+                        </div>
+                        <div>
+                            <a href="https://arxiv.org/abs/2501.18363" target="_blank">[Paper]</a>
+                        </div>
+                    </div>
+                </div>
+
+                <div class='row vspace-top'>
+                    <div class="col">
+                        <div class='paper-title'>
+                            Understanding and Mitigating Miscalibration in Prompt Tuning for Vision-Language Models
                         </div>
                         <div class='paper-authors'>
                             Shuoyuan Wang, Yixuan Li, <b>Hongxin Wei</b> <sup>*</sup>
