--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
                     My research interest falls in the scope of reliable machine learning (uncertainty estimation), and its applications in data optimization and privacy. 
                     Generally, we expect deep learning models to produce precise estimation of their uncertainty in predictions, using the form of probabilities (confidences in ML) or conformal prediction sets. 
                     Besides, my research is closely related to data-centric machine learning and foundation model, like data quality and efficiency. We are also interested in the statistic theory of data selection in machine learning, which provides theoretical principles to guide the data optimization in machine learning workflows.
-                    <p style="color: skyblue">We are always actively looking for Postdocs, PhDs, and RA/interns to join our research.</p>
+                    <p style="color: #1E90FF"><b>We are always actively looking for Postdocs, PhDs, and RA/interns to join our research.</b></p>
                 </p>
                 
 
