--- a/index.html
+++ b/index.html
@@ -380,6 +380,20 @@
                 <div class='row vspace-top'>
                     <div class="col">
                         <div class='paper-title'>
+                            Efficient Membership Inference Attacks by Bayesian Neural Network
+                        </div>
+                        <div class='paper-authors'>
+                            Zhenlong Liu, Wenyu Jiang, Feng Zhou, <b>Hongxin Wei</b> <sup>*</sup>
+                        </div>
+                        <div>
+                            <a href="https://arxiv.org/abs/2503.07482" target="_blank">[Paper]</a>
+                        </div>
+                    </div>
+                </div>
+
+                <div class='row vspace-top'>
+                    <div class="col">
+                        <div class='paper-title'>
                             Exploring Imbalanced Annotations for Effective In-Context Learning
                         </div>
                         <div class='paper-authors'>
@@ -445,6 +459,20 @@
                         </div>
                         <div>
                             <a href="https://arxiv.org/abs/2410.02681" target="_blank">[Paper]</a>
+                        </div>
+                    </div>
+                </div>
+
+                <div class='row vspace-top'>
+                    <div class="col">
+                        <div class='paper-title'>
+                            C-Adapter: Adapting Deep Classifiers for Efficient Conformal Prediction Sets
+                        </div>
+                        <div class='paper-authors'>
+                            Kangdao Liu, Hao Zeng, Jianguo Huang, Huiping Zhuang, Chi-Man Vong, <b>Hongxin Wei</b> <sup>*</sup>
+                        </div>
+                        <div>
+                            <a href="https://arxiv.org/abs/2410.09408" target="_blank">[Paper]</a>
                         </div>
                     </div>
                 </div>
@@ -518,21 +546,24 @@
                 </div>
 
                 <div class='row vspace-top'>
+                    <!-- <div class="col-sm-3">
+                        <img src='imgs/star_img.png' class='img-fluid'>
+                    </div> -->
+
                     <div class="col">
                         <div class='paper-title'>
-                            C-Adapter: Adapting Deep Classifiers for Efficient Conformal Prediction Sets
+                            Impact of Noisy Supervision in Foundation Model Learning
                         </div>
                         <div class='paper-desc'>
-                            ICLR 2025
+                            TPAMI
                         </div>
                         <div class='paper-authors'>
-                            Kangdao Liu, Hao Zeng, Jianguo Huang, Huiping Zhuang, Chi-Man Vong, <b>Hongxin Wei</b> <sup>*</sup>
-                        </div>
-                        <div>
-                            <a href="https://arxiv.org/abs/2410.09408" target="_blank">[Paper]</a>
+                            Hao Chen, Zihan Wang, Ran Tao, <b>Hongxin Wei</b>, Xing Xie, Masashi Sugiyama, Bhiksha Raj, Jindong Wang
                         </div>
                     </div>
                 </div>
+
+
 
                 <div class='row vspace-top'>
                     <!-- <div class="col-sm-3">
