--- a/index.html
+++ b/index.html
@@ -142,6 +142,15 @@
                         February 2025
                     </div>
                     <div class="col">
+                        Three papers are accepted by ICML 2025. Congratulations to Shuoyuan and Hao Zeng!
+                    </div>
+                </div>
+
+                <div class='row vspace-top-news'>
+                    <div class="col-sm-2 news-date">
+                        February 2025
+                    </div>
+                    <div class="col">
                         I will be serving as a Area Chair for NeurIPS 2025.
                     </div>
                 </div>
@@ -405,34 +414,7 @@
                     </div>
                 </div>
 
-                <div class='row vspace-top'>
-                    <div class="col">
-                        <div class='paper-title'>
-                            Parametric Scaling Law of Tuning Bias in Conformal Prediction
-                        </div>
-                        <div class='paper-authors'>
-                            Hao Zeng, Kangdao Liu, Bingyi Jing, <b>Hongxin Wei</b> <sup>*</sup>
-                        </div>
-                        <div>
-                            <a href="https://arxiv.org/abs/2502.03023" target="_blank">[Paper]</a>
-                        </div>
-                    </div>
-                </div>
 
-
-                <div class='row vspace-top'>
-                    <div class="col">
-                        <div class='paper-title'>
-                            How Contaminated Is Your Benchmark? Quantifying Dataset Leakage in Large Language Models with Kernel Divergence
-                        </div>
-                        <div class='paper-authors'>
-                            Hyeong Kyu Choi, Maxim Khanov, <b>Hongxin Wei</b>, Yixuan Li
-                        </div>
-                        <div>
-                            <a href="https://arxiv.org/abs/2502.00678" target="_blank">[Paper]</a>
-                        </div>
-                    </div>
-                </div>
 
 
                 <div class='row vspace-top'>
@@ -449,19 +431,6 @@
                     </div>
                 </div>
 
-                <div class='row vspace-top'>
-                    <div class="col">
-                        <div class='paper-title'>
-                            Understanding and Mitigating Miscalibration in Prompt Tuning for Vision-Language Models
-                        </div>
-                        <div class='paper-authors'>
-                            Shuoyuan Wang, Yixuan Li, <b>Hongxin Wei</b> <sup>*</sup>
-                        </div>
-                        <div>
-                            <a href="https://arxiv.org/abs/2410.02681" target="_blank">[Paper]</a>
-                        </div>
-                    </div>
-                </div>
 
                 <div class='row vspace-top'>
                     <div class="col">
@@ -543,6 +512,58 @@
 
                 <div id='header-text-remark'>
                     ( <sup>*</sup> Corresponding author; <sup>&#8224</sup> Equal contribution)
+                </div>
+
+                <div class='row vspace-top'>
+                    <div class="col">
+                        <div class='paper-title'>
+                            Understanding and Mitigating Miscalibration in Prompt Tuning for Vision-Language Models
+                        </div>
+                        <div class='paper-desc'>
+                            ICML 2025
+                        </div>
+                        <div class='paper-authors'>
+                            Shuoyuan Wang, Yixuan Li, <b>Hongxin Wei</b> <sup>*</sup>
+                        </div>
+                        <div>
+                            <a href="https://arxiv.org/abs/2410.02681" target="_blank">[Paper]</a>
+                        </div>
+                    </div>
+                </div>
+
+                <div class='row vspace-top'>
+                    <div class="col">
+                        <div class='paper-title'>
+                            Parametric Scaling Law of Tuning Bias in Conformal Prediction
+                        </div>
+                        <div class='paper-desc'>
+                            ICML 2025
+                        </div>
+                        <div class='paper-authors'>
+                            Hao Zeng, Kangdao Liu, Bingyi Jing, <b>Hongxin Wei</b> <sup>*</sup>
+                        </div>
+                        <div>
+                            <a href="https://arxiv.org/abs/2502.03023" target="_blank">[Paper]</a>
+                        </div>
+                    </div>
+                </div>
+
+
+                <div class='row vspace-top'>
+                    <div class="col">
+                        <div class='paper-title'>
+                            How Contaminated Is Your Benchmark? Quantifying Dataset Leakage in Large Language Models with Kernel Divergence
+                        </div>
+                        <div class='paper-desc'>
+                            ICML 2025
+                        </div>
+                        <div class='paper-authors'>
+                            Hyeong Kyu Choi, Maxim Khanov, <b>Hongxin Wei</b>, Yixuan Li
+                        </div>
+                        <div>
+                            <a href="https://arxiv.org/abs/2502.00678" target="_blank">[Paper]</a>
+                        </div>
+                    </div>
                 </div>
 
                 <div class='row vspace-top'>
