--- a/index.html
+++ b/index.html
@@ -1325,7 +1325,7 @@
                         </div>
                         <div class='paper-desc'>
                             Master student <br>
-                            Bachelor degree from SUSTech
+                            Now Intern at Tencent
                         </div>
                     </div>
 
@@ -1344,29 +1344,6 @@
                         </div>
                     </div> -->
 
-
-
-                    <div class="col">
-                        <div class='paper-title'>
-                            Wenyu Jiang
-                        </div>
-                        <div class='paper-desc'>
-                            Research Intern <br>
-                            Ph.D. student at Nanjing University.
-                        </div>
-                    </div>
-
-
-                    <div class="col">
-                        <div class='paper-title'>
-                             Kangdao Liu
-                        </div>
-                        <div class='paper-desc'>
-                            Research Intern <br>
-                            Ph.D. student at University of Macau
-                        </div>
-                    </div>
-
                     <div class="col">
                         <div class='paper-title'>
                             Hongfu Gao
@@ -1376,6 +1353,26 @@
                             Master student at XJTU
                         </div>
                     </div>
+
+
+                    <div class="col">
+                        <div class='paper-title'>
+                            Xuanning Zhou
+                        </div>
+                        <div class='paper-desc'>
+                            Undergraduate student at HITSZ
+                        </div>
+                    </div>
+
+                    <div class="col">
+                        <div class='paper-title'>
+                            Huajun Xi
+                        </div>
+                        <div class='paper-desc'>
+                            Undergraduate student at SUSTech
+                        </div>
+                    </div>
+
 
                 </div>
 
@@ -1402,40 +1399,6 @@
                         </div>
                     </div> -->
                 <!-- </div> -->
-
-                <div class='row vspace-top'>
-                    
-
-                    <div class="col">
-                        <div class='paper-title'>
-                            Jianqing Song
-                        </div>
-                        <div class='paper-desc'>
-                            Research Intern, <br>
-                            PhD student at Nanjing University
-                        </div>
-                    </div>
-
-                    <div class="col">
-                        <div class='paper-title'>
-                            Xuanning Zhou
-                        </div>
-                        <div class='paper-desc'>
-                            Undergraduate student at HITSZ
-                        </div>
-                    </div>
-
-                    <div class="col">
-                        <div class='paper-title'>
-                            Huajun Xi
-                        </div>
-                        <div class='paper-desc'>
-                            Undergraduate student at SUSTech
-                        </div>
-                    </div>
-
-
-                </div>
 
 
                 <div class='row vspace-top'>
@@ -1498,13 +1461,45 @@
 
                     <div class="col">
                         <div class='paper-title'>
+                            Jianqing Song
+                        </div>
+                        <div class='paper-desc'>
+                            Research Intern (2024), <br>
+                            PhD student at Nanjing University
+                        </div>
+                    </div>
+                </div>
+
+                <div class='row vspace-top'>
+
+                    <div class="col">
+                        <div class='paper-title'>
+                            Wenyu Jiang
+                        </div>
+                        <div class='paper-desc'>
+                            Research Intern (2023-2024) <br>
+                            Ph.D. student at Nanjing University.
+                        </div>
+                    </div>
+
+
+                    <div class="col">
+                        <div class='paper-title'>
+                             Kangdao Liu
+                        </div>
+                        <div class='paper-desc'>
+                            Research Intern (2024) <br>
+                            Ph.D. student at University of Macau
+                        </div>
+                    </div>
+
+                    <div class="col">
+                        <div class='paper-title'>
                         </div>
                         <div class='paper-desc'>
                         </div>
                     </div>
                 </div>
-
-
 
 
                 <!-- <div class='vspace-top'>
