--- a/index.html
+++ b/index.html
@@ -461,21 +461,6 @@
 
 
                 <div class='row vspace-top'>
-                    <div class="col">
-                        <div class='paper-title'>
-                            C-Adapter: Adapting Deep Classifiers for Efficient Conformal Prediction Sets
-                        </div>
-                        <div class='paper-authors'>
-                            Kangdao Liu, Hao Zeng, Jianguo Huang, Huiping Zhuang, Chi-Man Vong, <b>Hongxin Wei</b> <sup>*</sup>
-                        </div>
-                        <div>
-                            <a href="https://arxiv.org/abs/2410.09408" target="_blank">[Paper]</a>
-                        </div>
-                    </div>
-                </div>
-
-
-                <div class='row vspace-top'>
                     <!-- <div class="col-sm-3">
                         <img src='imgs/star_img.png' class='img-fluid'>
                     </div> -->
@@ -512,23 +497,6 @@
                     </div>
                 </div>
 
-                <div class='row vspace-top'>
-                    <!-- <div class="col-sm-3">
-                        <img src='imgs/star_img.png' class='img-fluid'>
-                    </div> -->
-
-                    <div class="col">
-                        <div class='paper-title'>
-                            Does Confidence Calibration Help Conformal Prediction?
-                        </div>
-                        <div class='paper-authors'>
-                            Huajun Xi, Jianguo Huang, Lei Feng, <b>Hongxin Wei</b> <sup>*</sup>
-                        </div>
-                        <div>
-                            <a href="https://arxiv.org/pdf/2402.04344" target="_blank">[Paper]</a>
-                        </div>
-                    </div>
-                </div>
 
 
 
@@ -540,6 +508,41 @@
 
                 <div id='header-text-remark'>
                     ( <sup>*</sup> Corresponding author; <sup>&#8224</sup> Equal contribution)
+                </div>
+<!-- 
+                <div class='row vspace-top'>
+                    <div class="col">
+                        <div class='paper-title'>
+                            C-Adapter: Adapting Deep Classifiers for Efficient Conformal Prediction Sets
+                        </div>
+                        <div class='paper-authors'>
+                            Kangdao Liu, Hao Zeng, Jianguo Huang, Huiping Zhuang, Chi-Man Vong, <b>Hongxin Wei</b> <sup>*</sup>
+                        </div>
+                        <div>
+                            <a href="https://arxiv.org/abs/2410.09408" target="_blank">[Paper]</a>
+                        </div>
+                    </div>
+                </div> -->
+
+                <div class='row vspace-top'>
+                    <!-- <div class="col-sm-3">
+                        <img src='imgs/star_img.png' class='img-fluid'>
+                    </div> -->
+
+                    <div class="col">
+                        <div class='paper-title'>
+                            Does Confidence Calibration Help Conformal Prediction?
+                        </div>
+                        <div class='paper-desc'>
+                            TMLR
+                        </div>
+                        <div class='paper-authors'>
+                            Huajun Xi, Jianguo Huang, Lei Feng, <b>Hongxin Wei</b> <sup>*</sup>
+                        </div>
+                        <div>
+                            <a href="https://openreview.net/pdf?id=6DDaTwTvdE" target="_blank">[Paper]</a>
+                        </div>
+                    </div>
                 </div>
 
                 <div class='row vspace-top'>
