--- a/index.html
+++ b/index.html
@@ -537,7 +537,7 @@
                             TMLR
                         </div>
                         <div class='paper-authors'>
-                            Huajun Xi, Jianguo Huang, Lei Feng, <b>Hongxin Wei</b> <sup>*</sup>
+                            Huajun Xi, Jianguo Huang, Kangdao Liu, Lei Feng, <b>Hongxin Wei</b> <sup>*</sup>
                         </div>
                         <div>
                             <a href="https://openreview.net/pdf?id=6DDaTwTvdE" target="_blank">[Paper]</a>
