--- a/index.html
+++ b/index.html
@@ -1237,11 +1237,11 @@
 
 
                 <!-- <div class='row vspace-top'>
-                    <!-- <div class="col-sm-3">
+                    <div class="col-sm-3">
                         <img src='imgs/deepvoxels.png' class='img-fluid'>
                     </div> -->
 
-                    <div class="col">
+                    <!-- <div class="col">
                       <div class='paper-title'>
                         Embedding-Augmented Generalized Matrix Factorization for Recommendation with Implicit Feedback
                       </div>
@@ -1255,7 +1255,7 @@
                          <a href="https://ieeexplore.ieee.org/document/9252133" target="_blank">[Paper]</a>
                       </div>
                     </div>
-                </div> -->
+                </div>  -->
 
 
                 <div class='row vspace-top'>
